set to show update

--- a/theme/index.html
+++ b/theme/index.html
@@ -7,6 +7,14 @@
  // GITHUB: https://github.com/themefisher/
 -->
 
+
+<!--
+ // WEBSITE: https://themefisher.com
+ // TWITTER: https://twitter.com/themefisher
+ // FACEBOOK: https://www.facebook.com/themefisher
+ // GITHUB: https://github.com/themefisher/
+-->
+
 <html lang="en-us">
 
 <head>
@@ -260,7 +268,7 @@
               <img src="images/portfolio/bag.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
               <div class="overlay-box">
                 <div class="overlay-inner">
-                  <a class="overlay-content" href="logo-portfolio.html">
+                  <a class="overlay-content" href="flier-portfolio.html">
                     <h5 class="mb-0">Flier</h5>
                     <p>Designs</p>
                   </a>
@@ -276,7 +284,7 @@
               <img src="images/portfolio/bag.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
               <div class="overlay-box">
                 <div class="overlay-inner">
-                  <a class="overlay-content" href="portfolio-single.html">
+                  <a class="overlay-content" href="logo-portfolio.html">
                     <h5 class="mb-0">Logo</h5>
                     <p>Designs</p>
                   </a>
@@ -292,7 +300,7 @@
               <img src="images/portfolio/bag.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
               <div class="overlay-box">
                 <div class="overlay-inner">
-                  <a class="overlay-content" href="portfolio-single.html">
+                  <a class="overlay-content" href="flier-portfolio.html">
                     <h5 class="mb-0">Brand </h5>
                     <p>Designs</p>
                   </a>
@@ -308,7 +316,7 @@
               <img src="images/portfolio/bag.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
               <div class="overlay-box">
                 <div class="overlay-inner">
-                  <a class="overlay-content" href="portfolio-single.html">
+                  <a class="overlay-content" href="flier-portfolio.html">
                     <h5 class="mb-0">Social Media</h5>
                     <p>Designs</p>
                   </a>
